# OSLabs

./: .gitignore  .gitignore.txt  CMakeLists.txt  Matrix_Window.cpp  Matrix_Windows(Linux).cpp  Matrix_buffered_channel.cpp  Matrix_buffered_channel.h  README.md  matrix2.txt
Channel/: CMakeLists.txt  buffered_channel.cpp  buffered_channel.h
Lab5/: Lab5.sln
Lab5/Lab5/: Lab5.cpp  Lab5.vcxproj  Lab5.vcxproj.filters  Matrix.cpp  Matrix.h  MatrixMultiplicator.cpp  MatrixMultiplicator.h
Lab5/Lab5/x64/Debug/: Lab5.exe.recipe  Lab5.ilk  vc143.idb
Lab5/Lab5/x64/Debug/Lab5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
Libs/MyMain/: MyMain.sln
Libs/MyMain/MyMain/: MyMain.vcxproj
Libs/MyNumber/: MyNumber.sln
Libs/MyNumber/MyNumber/: MyNumber.h  MyNumber.vcxproj  MyNumber.vcxproj.filters
Libs/MyNumber/Output/: MyNumber.idb  MyNumber.lib
Libs/MyVector/: MyVector.sln
Libs/MyVector/MyVector/: MyVector.cpp  MyVector.h  MyVector.vcxproj  MyVector.vcxproj.filters
Libs/MyVector/Output/: MyVector.exp  MyVector.lib
LinuxBash/: LinuxScript  LinuxScript.sh
LinuxBash/Main/: main.cpp
LinuxBash/Number/: Number.h
LinuxBash/Vector/: Vector.cpp  Vector.h
MainTest/: CMakeLists.txt  main.cpp
Number/: CMakeLists.txt  Number.cpp
Pipes/A/: main.cpp
Pipes/M/: main.cpp
PipesLinux/A/: main.cpp
Vector/: CMakeLists.txt  Vector.h
WindowsScript/: MyMain.cpp  WindowsScript.ps1
WindowsScript/Number/: MyNumber.cpp  MyNumber.lib  libNumber.lib
WindowsScript/Vector/: MyVector.cpp  MyVector.h
